--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,29 +1,33 @@
 .banner-container {
   color: white;
   object-fit: contain;
-  height: 448px;
+  height: 800px;
+  background-size: cover;
 }
 
 .banner-content {
-  margin-left: 30px;
-  padding-top: 140px;
-  height: 190px;
+  margin-left: 60px;
+  padding-top: 300px;
+  height: 500px;
 }
 
 .banner-title {
-  font-size: 3rem;
+  font-size: 6rem;
   font-weight: 800;
   padding-bottom: 0.3rem;
+  transform-origin: bottom left;
+  color: beige;
+  text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.8);
 }
 
 .banner-description {
   width: 45rem;
-  line-height: 1.3;
-  padding-top: 1rem;
-  font-size: 0.7rem;
-  max-width: 360px;
-  height: 80px;
-  margin-top: 0.6rem;
+  line-height: 1.5;
+  font-size: 0.7vw;
+  font-weight: 400;
+  max-width: 500px;
+  max-height: 90px;
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7);
 }
 
 .banner-buttons-container {
@@ -32,18 +36,49 @@
 
 .banner-button {
   cursor: pointer;
-  color: #fff;
   outline: none;
   border: none;
-  font-weight: 700;
-  border-radius: 0.2vw;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  margin-left: 2rem;
+  border-radius: 6px;
   padding-top: 0.5rem;
-  background-color: rgba(51, 51, 51, 0.5);
-  padding-bottom: 0.5rem;
+  background-color: white;
+  color: black;
+  padding: 1.5rem;
+  margin-top: 10rem;
+  min-width: 140px;
 }
+
+.banner-button span{
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: block;
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 2.4rem;
+}
+
+.banner-button2 {
+  margin-left: 2rem;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  border-radius: 6px;
+  background-color: rgba(109, 109, 110, 0.7);
+  color: white;
+  padding: 1.5rem;
+  margin-top: 8rem;
+  min-width: 140px;
+}
+
+.banner-button2 span{
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: block;
+  font-size: 2.5rem;
+  line-height: 2.4rem;
+  font-weight: 700;
+}
+
+
 
 .banner-button:hover {
   color: #000;
