--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -1,6 +1,11 @@
 .row-container {
   margin-left: 20px;
   color: white;
+
+  /* novo */
+  overflow-x: auto;
+  white-space: nowrap;
+  position: relative;
 }
 
 .row-cards {
@@ -8,6 +13,7 @@
   overflow-y: hidden;
   overflow-x: scroll;
   padding: 20px;
+  
 }
 
 .row-cards::-webkit-scrollbar {
@@ -25,9 +31,11 @@
 .movie-card-large {
   object-fit: contain;
   width: 100%;
-  max-height: 250px;
+  max-height: 220px;
   margin-bottom: 10px;
+  margin-right: 10px;
   transition: transform 450ms;
+  border-radius: 1rem;
 }
 
 .movie-card:hover {
@@ -37,4 +45,33 @@
 .row-header{
   margin-top: 1.5rem;
   margin-left: 1rem;
+}
+
+.arrow-container {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  cursor: pointer;
+  /* Adicione estilos para a seta (pode ser um ícone ou um elemento visual) */
+  font-size: 24px;
+  color: white;
+}
+
+.arrow-container-left,
+.arrow-container-right {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 24px;
+  color: white;
+  cursor: pointer;
+}
+
+.arrow-container-left {
+  left: 0;
+}
+
+.arrow-container-right {
+  right: 0;
 }
