--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -28,6 +28,19 @@
   transition: transform 450ms;
 }
 
+/* .movie-card:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color:  #000;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  border-radius: 30px;
+} */
+
 .movie-card-large {
   object-fit: contain;
   width: 100%;
@@ -45,6 +58,7 @@
 .row-header{
   margin-top: 1.5rem;
   margin-left: 1rem;
+  font-size: 2.2rem;
 }
 
 .arrow-container {
