--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -3,6 +3,7 @@
   object-fit: contain;
   height: 800px;
   background-size: cover;
+  margin-bottom: 1rem;
 }
 
 .banner-content {
@@ -16,7 +17,7 @@
   font-weight: 800;
   padding-bottom: 0.3rem;
   transform-origin: bottom left;
-  color: beige;
+  color: white;
   text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.8);
 }
 
@@ -32,6 +33,8 @@
 
 .banner-buttons-container {
   margin-top: 0.6rem;
+  display: flex;
+  align-items: flex-end;
 }
 
 .banner-button {
@@ -39,21 +42,12 @@
   outline: none;
   border: none;
   border-radius: 6px;
-  padding-top: 0.5rem;
   background-color: white;
   color: black;
   padding: 1.5rem;
   margin-top: 10rem;
   min-width: 140px;
-}
-
-.banner-button span{
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  display: block;
-  font-size: 2.5rem;
-  font-weight: 700;
-  line-height: 2.4rem;
+  min-height: 60px;
 }
 
 .banner-button2 {
@@ -69,13 +63,32 @@
   min-width: 140px;
 }
 
+.banner-button span{
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  gap: 0.5rem;
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 2.4rem;
+
+}
+
+
+
 .banner-button2 span{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  display: block;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  gap: 0.5rem;
   font-size: 2.5rem;
-  line-height: 2.4rem;
   font-weight: 700;
+  line-height: 2.4rem;
+ 
 }
 
 
@@ -84,4 +97,11 @@
   color: #000;
   background-color: #e6e6e6;
   transition: all 0.2s;
+}
+
+.style-icon{
+  width: 30px;
+  height: auto;
+  display:inline-flex;
+  text-align: center;
 }
