--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -2,28 +2,28 @@
   position: fixed;
   top: 0;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   width: 100%;
   height: 30px;
   padding: 20px;
   z-index: 1;
-
-  /* Animations */
   transition-timing-function: ease-in;
-  transition: all 0.5s;
+  transition: all 0.8s;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .nav-logo {
   position: fixed;
-  left: 20px;
-  width: 80px;
+  left: 40px;
+  width: 100px;
   object-fit: contain;
 }
 
 .nav-avatar {
   position: fixed;
-  right: 20px;
-  width: 70px;
+  right: 30px;
+  width: 40px;
   object-fit: contain;
 }
 
