--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -15,7 +15,7 @@
 
 .nav-logo {
   position: fixed;
-  left: 40px;
+  left: 50px;
   width: 100px;
   object-fit: contain;
 }
@@ -23,6 +23,7 @@
 .nav-avatar {
   position: fixed;
   right: 30px;
+  top: 15px;
   width: 40px;
   object-fit: contain;
 }
@@ -30,3 +31,13 @@
 .nav-container-black {
   background-color: #111;
 }
+
+ul {
+  display: flex;
+  align-items: center;
+  margin-left: 13rem;
+  gap: 2.2rem;
+  font-size: 1.6rem;
+  font-weight: 600;
+}
+
